@@ -62,7 +62,7 @@ module ActiveMerchant #:nodoc:
         add_customer_data(post, options)
         reference_action = add_reference(post, authorization)
         add_echo(post, options)
-        post[:a1] = options[:order_id] || generate_unique_id
+        post[:a1] = generate_unique_id
 
         commit(:void, post, reference_action)
       end
@@ -109,8 +109,9 @@ module ActiveMerchant #:nodoc:
 
       def add_invoice(post, money, options)
         post[:a4] = amount(money)
-        post[:a1] = options[:order_id] || generate_unique_id
+        post[:a1] = generate_unique_id
         post[:a5] = options[:currency] || currency(money)
+        post[:h9] = options[:order_id]
       end
 
       CARD_TYPES = {
